--- a/src/main/resources/static/pacienteAlta.html
+++ b/src/main/resources/static/pacienteAlta.html
@@ -41,6 +41,31 @@
                            name="dni" required></input>
                 </div>
 
+                <div class="form-group">
+                    <label class="control-label" for="calle">Calle:</label>
+                    <input type="text" class="form-control" id="calle"
+                           placeholder="Ingrese Calle"
+                           name="calle" required></input>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="numero">Número:</label>
+                    <input type="text" class="form-control" id="numero"
+                           placeholder="Ingrese Número"
+                           name="numero" required></input>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="localidad">Localidad:</label>
+                    <input type="text" class="form-control" id="localidad"
+                           placeholder="Ingrese Localidad"
+                           name="localidad" required></input>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="provincia">Provincia:</label>
+                    <input type="text" class="form-control" id="provincia"
+                           placeholder="Ingrese Provincia"
+                           name="provincia" required></input>
+                </div>
+
 
                 <button type="submit" class="btn btn-danger"
                         id="btn-add-new-paciente">Guardar</button>
